--- a/client/src/components/Homepage/Homepage.css
+++ b/client/src/components/Homepage/Homepage.css
@@ -13,7 +13,7 @@
 .home-whole-day-mode{
     width:100%;
     height: 100vh;
-    background-color:rgb(240,255,255);
+    background-color:rgb(250,235,215);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -149,8 +149,10 @@ box-shadow:         5px 5px 2px 0px black;
 
 
 .logo-social{
-    display: block;
-    width:70px;
+    display: flex;
+    width: 80px;
+    flex-direction: column;
+    justify-content: right;
     position: absolute;
     bottom: 150px;
     right:5px;
@@ -159,28 +161,35 @@ box-shadow:         5px 5px 2px 0px black;
 .fas-night-mode{
     margin-top:25px;
     padding: 10px;
-    color: white;
+    width: fit-content;
     display: block;
+    background: white;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
     
 }
 
-    
 .fas-day-mode{
     margin-top:25px;
     padding: 10px;
-    color:black;
+    width: fit-content;
     display: block;
-    background: black;
-background-clip: text;
--webkit-text-fill-color: transparent;
+    background: white;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
     
 }
 
 
 
-.fas-day-mode::before{
+.fas-night-mode::before{
     font-size: 25px;
     color:black;
+}
+
+.fas-day-mode::before{
+    font-size: 25px;
+  
 }
 
 .change-img{
