--- a/client/src/pages/Faqs/Faqs.css
+++ b/client/src/pages/Faqs/Faqs.css
@@ -32,11 +32,6 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  cursor: pointer;
-}
-
-.faq-ask:hover {
-  opacity: 0.7;
 }
 
 @media(max-width: 630px) {
@@ -53,7 +48,11 @@
 }
 
 .faq-ask-btn {
-  background: white;
+  cursor: pointer;
+}
+
+.faq-ask-btn:hover {
+  opacity: 0.7;
 }
 
 .search-box {
