--- a/client/src/pages/Faqs/Faqs.css
+++ b/client/src/pages/Faqs/Faqs.css
@@ -79,6 +79,7 @@
   border-radius: 10px;
   /* color: #eee; */
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  cursor: default;
 }
 
 .faqs .faq .faq-question {
