--- a/client/src/components/Homepage/Homepage.css
+++ b/client/src/components/Homepage/Homepage.css
@@ -96,6 +96,7 @@ box-shadow:         5px 5px 2px 0px black;
 .circle-night-mode{
     position: absolute;
     right:0;
+    bottom: 0;
     width:100%;
     height:100%;
     clip-path: circle(600px at right 800px);
@@ -104,8 +105,9 @@ box-shadow:         5px 5px 2px 0px black;
 .circle-day-mode{
     position: absolute;
     right:0;
-    width:100%;
-    height:100%;
+    bottom: 0;
+    width: 100vw;
+    height:100vh;
     clip-path: circle(600px at right 800px);
     background-color:rgb(135,206,250);
 }
