--- a/client/src/components/Homepage/Homepage.css
+++ b/client/src/components/Homepage/Homepage.css
@@ -13,7 +13,7 @@
 .home-whole-day-mode{
     width:100%;
     height: 100vh;
-    background-color:rgb(240,255,240);
+    background-color:whitesmoke;
     display: flex;
     justify-content: center;
     align-items: center;
