--- a/client/src/components/navbar/SideDrawer.css
+++ b/client/src/components/navbar/SideDrawer.css
@@ -7,7 +7,7 @@
   left: 0;
   width: 100%;
   z-index: 1;
-  transform: translateY(calc(-100% + 10vh));
+  transform: translateY(calc(-100%));
   transition: transform 0.1s ease-out;
   text-align: center;
 }
@@ -56,12 +56,6 @@
   border-radius: 1rem;
   background: linear-gradient(120deg, #505add 0%, #df42b1 100%);
   margin-left: -1rem;
-}
-
-@media (min-width: 1023px) {
-  .side-drawer {
-    display: none;
-  }
 }
 
 #onReg:hover {
