--- a/client/src/pages/Homepage/Homepage.css
+++ b/client/src/pages/Homepage/Homepage.css
@@ -1,5 +1,6 @@
 @import url(//db.onlinewebfonts.com/c/7e96eba370659b4e4563309dc4ebb33f?family=Samarkan);
 @font-face {font-family: "Samarkan"; src: url("//db.onlinewebfonts.com/t/7e96eba370659b4e4563309dc4ebb33f.eot"); src: url("//db.onlinewebfonts.com/t/7e96eba370659b4e4563309dc4ebb33f.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/7e96eba370659b4e4563309dc4ebb33f.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/7e96eba370659b4e4563309dc4ebb33f.woff") format("woff"), url("//db.onlinewebfonts.com/t/7e96eba370659b4e4563309dc4ebb33f.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/7e96eba370659b4e4563309dc4ebb33f.svg#Samarkan") format("svg"); }
+@import url('https://fonts.googleapis.com/css2?family=Paytone+One&display=swap');
 .home-whole-night-mode{
     width:100%;
     height: 100vh;
@@ -639,5 +640,57 @@ box-shadow:         5px 5px 2px 0px black;
 
 }
 
+.fa {
+    cursor: pointer;
+    opacity: 0.7;
+}
+
+.fa:hover {
+    opacity: 1;
+}
 
 
+.bottom-nav {
+    color: white;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    position: absolute;
+    bottom: 10vh;
+    font-family: 'Paytone One', sans-serif;
+    font-size: 20px;
+    letter-spacing: 1px;
+    align-items: center;
+}
+
+.bottom-nav-btn {
+    opacity: 0.6;
+    cursor: pointer;
+    margin: 0 5vw;
+}
+
+.bottom-nav-btn:hover {
+    opacity: 1;
+}
+
+.bottom-nav-active {
+    opacity: 1;
+}
+
+.discover-btn {
+    width: max-content;
+    color: white;
+    font-family: 'Paytone One', sans-serif;
+    border-radius: 20px;
+    background-color: #10A5F9;
+    padding: 20px;
+    cursor: pointer;
+}
+
+.burger-btn {
+    position: fixed;
+    left: 5vw;
+    top: 5vh;
+    z-index: 100;
+}
