sample cultural page for each category of events

--- a/client/src/components/navbar/Toolbar.css
+++ b/client/src/components/navbar/Toolbar.css
@@ -4,8 +4,8 @@
   left: 0;
   width: 100%;
   background: #1e1534;
-  z-index: 2; 
-  height: 10vh;
+  z-index: 2;
+  height: 10%;
 }
 
 .toolbar__navigation {
