--- a/client/src/pages/Homepage/Homepage.css
+++ b/client/src/pages/Homepage/Homepage.css
@@ -191,12 +191,18 @@ box-shadow:         5px 5px 2px 0px black;
 
 .logo-social{
     display: flex;
-    width: 80px;
+    width: 70px;
     flex-direction: column;
-    justify-content: right;
-    position: absolute;
-    bottom: 150px;
-    right:5px;
+    margin-top: -400px;
+    text-align: center;
+    margin-left: 0;
+    font-size: 30px;
+    background-color: salmon;
+    margin-left: -15px;
+    padding-bottom: 15px;
+}
+.shift-l{
+    margin-left: -12px;
 }
 
 .fas-night-mode{
@@ -468,9 +474,16 @@ box-shadow:         5px 5px 2px 0px black;
   
 
   .logo-social{
-      position: absolute;
-      bottom: 90px;
-      right: 0;
+    display: flex;
+    width: 70px;
+    flex-direction: column;
+    margin-top: -400px;
+    text-align: center;
+    margin-left: 0;
+    font-size: 30px;
+    background-color: salmon;
+    margin-left: -15px;
+    padding-bottom: 15px; 
   }
 
   .fas-day-mode{
@@ -551,9 +564,16 @@ box-shadow:         5px 5px 2px 0px black;
     }
 
     .logo-social{
-        position: absolute;
-        bottom: 90px;
-        right: 0;
+        display: flex;
+        width: 70px;
+        flex-direction: column;
+        margin-top: -400px;
+        text-align: center;
+        margin-left: 0;
+        font-size: 30px;
+        background-color: salmon;
+        margin-left: -15px;
+        padding-bottom: 15px;
     }
 
     .fas-day-mode{
@@ -617,10 +637,16 @@ box-shadow:         5px 5px 2px 0px black;
     }
 
     .logo-social{
-        position: absolute;
-        bottom: 50px;
-        right: 0;
-      
+        display: flex;
+        width: 70px;
+        flex-direction: column;
+        margin-top: -400px;
+        text-align: center;
+        margin-left: 0;
+        font-size: 30px;
+        background-color: salmon;
+        margin-left: -15px;
+        padding-bottom: 15px;
     }
 
     .fas-day-mode{
@@ -750,4 +776,23 @@ box-shadow:         5px 5px 2px 0px black;
     margin: auto;
     position: absolute;
     left:90%;
+}
+
+
+
+@media(max-width:768px){
+    .logo-social{
+        display: flex;
+        width: 70px;
+        flex-direction: column;
+        margin-top: -700px;
+        text-align: center;
+        margin-left: 0;
+        font-size: 30px;
+        background-color: salmon;
+        margin-left: -15px;
+        padding-bottom: 15px;
+    }
+
+
 }
