--- a/client/src/components/HomepagePhone/homepage.phone.css
+++ b/client/src/components/HomepagePhone/homepage.phone.css
@@ -11,6 +11,7 @@
     background-color:rgb(30,21,52);
     overflow-x: hidden;
     position: relative;
+    border: 2px solid red;
 }
 
 .events-phone-box1{
@@ -85,4 +86,68 @@
     bottom: 0;
   
 }
+
+
+.hamburger-whole-phone{
+    width:90px;
+    height:40px;
+    position: absolute;
+    left:94%;
+    top:12px;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    z-index: 40000000000000000000;
+}
+
+.hamburger-whole-phone .ln1-phone{
+    transition: 1s ease-in-out;
+}
+.hamburger-whole-phone .ln2-phone{
+    transition: 1s ease-in-out;
+}
+.hamburger-whole-phone .ln3-phone{
+    transition: 1s ease-in-out;
+}
+
+.animate-ham-phone{
+    width: fit-content;
+    position: absolute;
+    right:30px;
+    top:30px;
+    cursor: pointer;
+    z-index: 4000000000000;
+}
+
+.animate-ham-phone .ln1-phone{
+    transition:all 1s ease-in-out;
+   transform: rotate(-45deg);
+   z-index: 4000000000;
+}
+.animate-ham-phone .ln3-phone{
+   transform: rotate(45deg);
+   position: relative;
+   bottom: 16px;
+   transition:all 1s ease-in-out;
+   z-index: 40000000000000;
+}
+
+.animate-ham-phone .ln2-phone{
+opacity: 0;
+}
+
+
+
+.line-phone{
+    width:30px;
+    margin:auto;
+    height: 3px;
+    background-color:white;
+    margin: 5px 0;
+    border-radius: 27px;
+  
+}
+
+
 
