--- a/client/src/pages/Homepage/Navbar/Navbarnewphone.css
+++ b/client/src/pages/Homepage/Navbar/Navbarnewphone.css
@@ -59,9 +59,10 @@
     background-color: orange;
 }
 
-.cont-col{
+.cont-col-phone{
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .list{
@@ -85,5 +86,8 @@
   cursor: pointer;
 }
 
-
-
+.cont-list-phone{
+    display: grid;
+    justify-content: center;
+    align-items: center;
+}
