--- a/client/src/pages/Events/EventsPage.css
+++ b/client/src/pages/Events/EventsPage.css
@@ -93,6 +93,12 @@
   opacity: 1;
 }
 
+@media(max-width: 900px) {
+  .close-btn{
+    right: 10px;
+  }
+}
+
 .event__details {
   width: 100%;
   height: 100%;
@@ -138,6 +144,11 @@
   overflow: auto;
 }
 
+.event__registration_section {
+  flex: 1;
+  width: 100%;
+}
+
 .event__details__main {
   font-weight: 400;
   flex: 2;
@@ -152,10 +163,8 @@
 }
 
 .event__details__btn {
-  flex: 1;
   width: 100%;
   display: flex;
-  justify-content: flex-end;
 }
 
 @media (max-width: 900px) {
@@ -176,7 +185,8 @@
 }
 
 .event__entry {
-  padding-top: 20px;
+  text-align: left;
+  font-weight: bold;
 }
 
 .event__time {
@@ -204,4 +214,15 @@
   color: black;
   font-weight: 400;
   font-size: 18px;
+}
+
+.col__separator {
+  width: 5%;
+  height: 100%;
+}
+
+@media(max-width: 1100px) {
+  .col__separator {
+    display: none;
+  }
 }
