--- a/client/src/pages/ContactUs/ContactUs.css
+++ b/client/src/pages/ContactUs/ContactUs.css
@@ -1,8 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Paytone+One&display=swap');
 
-.contact-page-main {
+.contact-page-main-night-mode {
     font-family: 'Paytone One', sans-serif;
     overflow-x: hidden;
+}
+
+.contact-page-main-day-mode {
+    font-family: 'Paytone One', sans-serif;
+    overflow-x: hidden;
+    background-color: #10A5F9;
 }
 
 .image-div{
@@ -15,7 +21,7 @@
     
 }
 
-.team-name-ContactUs{
+.team-name-ContactUs-night-mode{
     background-color: rgb(30, 21, 52);
     display: block;
     color: white;
@@ -26,9 +32,21 @@
     padding-right: 10vw;
     margin: 1.5% 0;
     text-align: start;
-   
     text-shadow: 5px 5px 5px rgba(0,0,0,.5);
-    
+}
+
+.team-name-ContactUs-day-mode{
+    background-color: #10A5F9;
+    display: block;
+    color: white;
+    font-size: 1.7vw;
+    border: none;
+    width:fit-content;
+    padding-left:  7vw;
+    padding-right: 10vw;
+    margin: 1.5% 0;
+    text-align: start;
+    text-shadow: 5px 5px 5px rgba(0,0,0,.5);
 }
 /* a:not([href]):not([tabindex]), a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover{
     color: #3BB5D3;
