--- a/client/src/pages/Homepage/Homepage.css
+++ b/client/src/pages/Homepage/Homepage.css
@@ -23,7 +23,7 @@
 .home-whole-day-mode{
     width:100%;
     height: 100vh;
-    background-color:whitesmoke;
+    background-color:#10A5F9;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -75,9 +75,9 @@
     font-family: "samarkan";
     text-align: center;
     font-size: 6em !important;
-    background: linear-gradient(45deg, #f3ec78, #af4261);
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
+    background: linear-gradient(45deg, #1e1534, #171515);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
     text-align: left;
 }
 
@@ -130,7 +130,7 @@ box-shadow:         5px 5px 2px 0px black;
     bottom: 0;
     right:0;
   border:2px solid transparent;
-  background-color: #10A5F9;
+  background-color: whitesmoke;
   border-top-left-radius: 100%;
   border-top-right-radius: 0;
   border-bottom-left-radius:0 ;
@@ -746,16 +746,30 @@ box-shadow:         5px 5px 2px 0px black;
     opacity: 1;
 }
 
+.bottom-nav .day-mode {
+    color: #1e1534;
+}
+
 .bottom-nav-active {
     opacity: 1;
 }
 
-.discover-btn {
+.discover-btn-night-mode {
     width: max-content;
     color: white;
     font-family: 'Paytone One', sans-serif;
     border-radius: 20px;
     background-color: #10A5F9;
+    padding: 20px;
+    cursor: pointer;
+}
+
+.discover-btn-day-mode {
+    width: max-content;
+    color: white;
+    font-family: 'Paytone One', sans-serif;
+    border-radius: 20px;
+    background-color: #1e1534;
     padding: 20px;
     cursor: pointer;
 }
