--- a/client/src/pages/ContactUs/ContactUs.css
+++ b/client/src/pages/ContactUs/ContactUs.css
@@ -22,7 +22,7 @@
 }
 
 .team-name-ContactUs-night-mode{
-    background-color: rgb(30, 21, 52);
+    background-color: #1e1534;
     display: block;
     color: white;
     font-size: 1.7vw;
