--- a/client/src/components/navbar/SideDrawer.css
+++ b/client/src/components/navbar/SideDrawer.css
@@ -7,7 +7,7 @@
   left: 0;
   width: 100%;
   z-index: 1;
-  transform: translateY(calc(-100% + 10vh));
+  transform: translateY(calc(-100%));
   transition: transform 0.1s ease-out;
   text-align: center;
 }
