--- a/client/src/pages/Homepage/Homepage.css
+++ b/client/src/pages/Homepage/Homepage.css
@@ -10,14 +10,20 @@
     align-items: center;
     position: absolute;
     top:0
-    
 }
 
-.whole-home{
+.whole-home-night-mode{
     position: relative;
     width: 100%;
     height: 100%;
     background-color: #171515;
+}
+
+.whole-home-day-mode{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background-color: #10A5F9;
 }
 
 .home-whole-day-mode{
@@ -737,7 +743,7 @@ box-shadow:         5px 5px 2px 0px black;
    
 }
 .bottom-nav-btn {
-    opacity: 0.6;
+    opacity: 0.8;
     cursor: pointer;
     margin: 0 5vw;
 }
@@ -890,3 +896,4 @@ opacity: 0;
     width: 100%;
     font-size: 24px;
 }
+
