--- a/client/src/pages/Merch/Merch.css
+++ b/client/src/pages/Merch/Merch.css
@@ -1,8 +1,17 @@
-.merch-page {
+.merch-page-night-mode {
     height: 100vh;
     width: 100%;
     display: flex;
     flex-direction: row;
+    background-color: rgb(30, 21, 52);
+}
+
+.merch-page-day-mode {
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    background-color: #10A5F9;
 }
 
 @media(max-width: 720px) {
